WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270539
[Unified PDF] Form control partial repaint for "related" fields is broken, results in fields getting stuck
https://bugs.webkit.org/show_bug.cgi?id=270539
Summary
[Unified PDF] Form control partial repaint for "related" fields is broken, re...
Sammy Gill
Reported
2024-03-05 13:45:32 PST
When interacting with an annotation can modify the state of a related annotation (e.g. interacting with radio buttons in the same group) the related annotations do not get repainted properly. This makes it seem like those annotations are not properly getting updated
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2024-03-05 13:45:56 PST
rdar://123637341
Sammy Gill
Comment 2
2024-03-05 15:20:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25507
EWS
Comment 3
2024-03-05 21:22:14 PST
Committed
275727@main
(d583f18ce8ed): <
https://commits.webkit.org/275727@main
> Reviewed commits have been landed. Closing PR #25507 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug